# rusty-dl-manager-deb

./: .gitignore  Cargo.toml  README.md  build.rs  settings.json
.github/workflows/: deb.yml
Downloads/: .sample2.txt.metadl
src/: colors.rs  download_mechanism.rs  extern_windows.rs  main.rs  menu_bar.rs  popups.rs  side_bar.rs  status_bar.rs  table.rs  tray.rs
src/dl/: errors.rs  file2dl.rs  lib.rs  metadata.rs  mod.rs  url.rs
src/server/: interception.rs  mod.rs
web_ext/: background.js  extensions.txt  manifest.json  popup.html  popup.js
web_ext/web-ext-artifacts/: download_echo-1.0.xpi
