[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
catppuccin-egui = { version = "5.3.0", default-features = false, features = ["egui28"] }
content_disposition = "0.4.0"
eframe = "0.28"
egui-phosphor = {version = "0.6", features = ["fill"] }
egui_extras = "0.28"
futures = "0.3.31"
irox-egui-extras = "0.4.6"
regex = "1.11.1"
reqwest = { version = "0.12.8", features = ["stream"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
egui-aesthetix = { version = "0.2.4", features = ["all_themes"] }
